--- a/templates/base.html
+++ b/templates/base.html
@@ -38,6 +38,7 @@
                     <li><a href="{% url 'pages:index' %}" class="list-item">الرئيسية</a></li>
                     <li><a href="{% url 'mosannaf:all' %}" class="list-item">المصنفات</a></li>
                     <!-- <li><a href="#" class="list-item">الكورسات</a></li> -->
+                    <li><a href="{% url 'mosannaf:categories' %}" class="list-item">الأقسام</a></li>
                     <li><a href="{% url 'pages:contact' %}" class="list-item">اتصل بنا</a></li>
                 </ul>
             </div>
