--- a/pages/templates/pages/index.html
+++ b/pages/templates/pages/index.html
@@ -13,94 +13,45 @@
 {% block content %}
 
 {% include "main.html" %}
-<section class=" section books-section">
-	<div class="container swiper mySwiper">
-		<div class="heading">
-			<h1>أشهر الكتب</h1>
-		</div>
-		<div class="books swiper-wrapper">
-			<div class="book swiper-slide">
-				<img src="./assets/images/ابني مشتت الانتباه (غلاف).jpg" alt="" class="book_img">
-				<p class="book_title">ابني متشتت الانتباه</p>
-			</div>
-			<div class="book swiper-slide ">
-				<img src="./assets/images/فن التواصل مع المراهقين (غلاف).jpg" alt="" class="book_img">
-				<p class="book_title">فن التواصل مع المراهقين</p>
-			</div>
-			<div class="book swiper-slide ">
-				<img src="./assets/images/حالة طوارئ (غلاف).jpg" alt="" class="book_img">
-				<p class="book_title">حالة طوارئ</p>
-			</div>
-			<div class="book swiper-slide ">
-				<img src="./assets/images/الحوار مع الابناء علاج لكل داء (غلاف).jpg" alt="" class="book_img">
-				<p class="book_title">الحوار مع اﻷبناء علاج لكل داء</p>
-			</div>
-			<div class="book swiper-slide ">
-				<img src="./assets/images/الحوار مع الابناء علاج لكل داء (غلاف).jpg" alt="" class="book_img">
-				<p class="book_title">الحوار مع اﻷبناء علاج لكل داء</p>
-			</div>
-			<div class="book swiper-slide ">
-				<img src="./assets/images/الحوار مع الابناء علاج لكل داء (غلاف).jpg" alt="" class="book_img">
-				<p class="book_title">الحوار مع اﻷبناء علاج لكل داء</p>
-			</div>
-			<div class="book swiper-slide ">
-				<img src="./assets/images/الحوار مع الابناء علاج لكل داء (غلاف).jpg" alt="" class="book_img">
-				<p class="book_title">الحوار مع اﻷبناء علاج لكل داء</p>
-			</div>
 
 
-		</div>
-		<div class="swiper-button-next"></div>
-		<div class="swiper-button-prev"></div>
-	<!-- <div class="swiper-pagination"></div> -->
-
-		<!-- <a href="#" class="btn btn-solid-dark">عرض المزيد</a> -->
-	</div>
-</section>
-
+{% for category in categories %}
 <section class=" section books-section" id="mainwoman">
-	<div class="container swiper mySwiper">
-		<div class="heading">
-			<h1>كتب الرجل والمرأة</h1>
-		</div>
-		<div class="books swiper-wrapper">
-			<div class="book swiper-slide">
-				<img src="./assets/images/ابني مشتت الانتباه (غلاف).jpg" alt="" class="book_img">
-				<p class="book_title">ابني متشتت الانتباه</p>
-			</div>
-			<div class="book swiper-slide ">
-				<img src="./assets/images/فن التواصل مع المراهقين (غلاف).jpg" alt="" class="book_img">
-				<p class="book_title">فن التواصل مع المراهقين</p>
-			</div>
-			<div class="book swiper-slide ">
-				<img src="./assets/images/حالة طوارئ (غلاف).jpg" alt="" class="book_img">
-				<p class="book_title">حالة طوارئ</p>
-			</div>
-			<div class="book swiper-slide ">
-				<img src="./assets/images/الحوار مع الابناء علاج لكل داء (غلاف).jpg" alt="" class="book_img">
-				<p class="book_title">الحوار مع اﻷبناء علاج لكل داء</p>
-			</div>
-			<div class="book swiper-slide ">
-				<img src="./assets/images/الحوار مع الابناء علاج لكل داء (غلاف).jpg" alt="" class="book_img">
-				<p class="book_title">الحوار مع اﻷبناء علاج لكل داء</p>
-			</div>
-			<div class="book swiper-slide ">
-				<img src="./assets/images/الحوار مع الابناء علاج لكل داء (غلاف).jpg" alt="" class="book_img">
-				<p class="book_title">الحوار مع اﻷبناء علاج لكل داء</p>
-			</div>
-			<div class="book swiper-slide ">
-				<img src="./assets/images/الحوار مع الابناء علاج لكل داء (غلاف).jpg" alt="" class="book_img">
-				<p class="book_title">الحوار مع اﻷبناء علاج لكل داء</p>
-			</div>
+    <div class="container swiper mySwiper">
+        <div class="heading">
+            <h1 class="intro-heading">{{category}}</h1>
+        </div>
+        <div class="books swiper-wrapper">
+            
+			{% for mosannaf in mosannafs %}
+				{% if mosannaf.branch == category %}
+				<div class="book swiper-slide">
+					<img class="book_img" src="{{mosannaf.image.url}}" alt="">
+					<p class="book_title">
+						<a href="{% url 'mosannaf:details' mosannaf.id %}">{{mosannaf}}</a>
+					</p>
+					<i>{{mosannaf.author}}</i>
+				</div>
+				{% else %}
+				<center>
+					<h2>
+						لا يوجد كتب في  "{{category}}"
+					</h2>
+				</center>
+				{% endif %}
+			{% endfor %}
 
+        </div>
+        <!-- <div class="swiper-button-next"></div>
+        <div class="swiper-button-prev"></div>
+        <div class="swiper-pagination"></div> -->
 
-		</div>
-		<div class="swiper-button-next"></div>
-		<div class="swiper-button-prev"></div>
-		<div class="swiper-pagination"></div>
-
-		<!-- <a href="#" class="btn btn-solid-dark">عرض المزيد</a> -->
-	</div>
+        <!-- <a href="#" class="btn btn-solid-dark">عرض المزيد</a> -->
+    </div>
 </section>
+
+
+{% endfor %}
+
 
 {% endblock content %}
