--- a/project/static/css/main.css
+++ b/project/static/css/main.css
@@ -596,3 +596,11 @@ form .input i {
 }
 
 
+.buttons-group {
+    display: flex;
+    justify-content: space-around;
+    margin-top: 1rem;
+    width: fit-content;
+    gap: 1rem;
+    flex-wrap: wrap;
+}
