--- a/staticfiles/css/main.css
+++ b/staticfiles/css/main.css
@@ -594,3 +594,13 @@ form .input i {
 .checked {
     color: orange;
 }
+
+
+.buttons-group {
+    display: flex;
+    justify-content: space-around;
+    margin-top: 1rem;
+    width: fit-content;
+    gap: 1rem;
+    flex-wrap: wrap;
+}
