--- a/mosannaf/templates/mosannaf/mosannaf_details.html
+++ b/mosannaf/templates/mosannaf/mosannaf_details.html
@@ -36,6 +36,7 @@
         <div class="intro">
             <!-- book title will be provided usign django -->
             <h1 class="heading book-title">{{mosannaf.name}}</h1>
+            <input type='button' hidden id='hidden' value='{{mosannaf.id}}'>
             <div class="prop">
                 <!-- author will be provided using django -->
                 تأليف: <span class="author">
@@ -44,17 +45,6 @@
                     </a>
                 </span>
             </div>
-            <!-- <div class="rating">
-                <div class="stars">
-                    <i class="fas fa-star "></i>
-                    <i class="fas fa-star-half "></i>
-                </div>
-                <div class="rating_count">
-                    <a href="#" style="color: #323232;">
-                        1.5 / 5 (<span>250 &nbsp;</span>تقييم)
-                    </a>
-                </div>
-            </div> -->
         </div>
         <div class="cover">
             <div class="img">
@@ -162,54 +152,27 @@
         <form method="POST" id="add-feedback">
             {% csrf_token %}
             <div class="input">
-                <div class="cta">
 
-                    <div class="rate">
-                        <button class="star fa fa-star fa-2x checked" id="first"></button>
-                        <button class="star fa fa-star fa-2x checked" id="second"></button>
-                        <button class="star fa fa-star fa-2x checked" id="third"></button>
-                        <button class="star fa fa-star fa-2x" id="fourth"></button>
-                        <button class="star fa fa-star fa-2x" id="fifth"></button>
-                    </div>
-                    <div class="input">
-                        {{form1}}
-                    </div>
+                <div class="rate">
+                    <button class="my-btn star fa fa-star fa-2x checked" id="first"></button>
+                    <button class="my-btn star fa fa-star fa-2x checked" id="second"></button>
+                    <button class="my-btn star fa fa-star fa-2x checked" id="third"></button>
+                    <button class="my-btn star fa fa-star fa-2x" id="fourth"></button>
+                    <button class="my-btn star fa fa-star fa-2x" id="fifth"></button>
                 </div>
-                <button type="submit" id="send-button" class="btn btn-solid-dark">إرسال</button>
-
-            <!-- {% if user.is_authenticated %}
-                <button type="submit" id="send-button" class="btn btn-solid-dark">إرسال</button>
-            {% else  %}
-                 <a href='{% url "account_login" %}' class="btn btn-solid-dark">إرسال</a>
-            {% endif %} -->
+                
             </div>
+            <div class="input">
+                {{form1}}
+            </div>
+            <button type="submit" id="send-button" class="btn btn-solid-dark">إرسال</button>
+
         </form>
         <div class="heading">
             <h2>التقييمات السابقة</h2>
         </div>
 
         <div id="feedbacks-container" data-url="">
-            <!-- {% for rate in rates %}
-            <div class="feedback">
-                <div class="feedback-account">
-                    <p class="feedback-account__user">ام محمد</p>
-                    <div class="feedback-account__rate">
-                        <div class="stars">
-                            <i class="fas fa-star "></i>
-                            <i class="fas fa-star-half "></i>
-                        </div>
-                        <p>
-                            (4.8 / 5)
-                        </p>
-                    </div>
-                </div>
-                <div class="feedback-details">
-                    <p>
-                        {{rate.details}}
-                    </p>
-                </div>
-            </div>
-            {% endfor %} -->
         </div>
         <a href="" class="btn btn-solid-dark">المزيد من التقييمات</a>
     </div>
@@ -245,26 +208,5 @@ function getFeedbacks() {
 }
 
 getFeedbacks();
-
-$(document).on('submit', '#add-feedback', function(e) {
-    e.preventDefault();
-    $.ajax({
-        type: 'POST',
-        url: '{% url "mosannaf:add-rate" %}',
-        data: {
-            mosannaf_id: '{{mosannaf.id}}',
-            details: $("input[name=details]").val(),
-            csrfmiddlewaretoken: $('input[name=csrfmiddlewaretoken]').val(),
-            action: 'post'
-        },
-        success: function(json) {
-            getFeedbacks();
-
-            document.querySelector("#add-feedback").reset();
-        }, error: function (xhr, errmsg, err) {
-
-        }
-    })
-})
 </script>
 {% endblock javascript %}
