--- a/pages/templates/pages/index.html
+++ b/pages/templates/pages/index.html
@@ -28,7 +28,7 @@
 				<div class="book swiper-slide">
 					<img class="book_img" src="{{mosannaf.image.url}}" alt="">
 					<p class="book_title">
-						<a href="{% url 'mosannaf:details' mosannaf.id %}">{{mosannaf}}</a>
+						<a href="{% url 'mosannaf:details' mosannaf.slug %}">{{mosannaf}}</a>
 					</p>
 					<i>{{mosannaf.author}}</i>
 				</div>
